<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Canadeche</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="palmi_hint">Coin Coin!</string>
    <string name="post_button">Post</string>
    <string name="general_preferences">General</string>
    <string name="pref_dummy_summary">Summary dummy</string>
    <string name="pref_dummy_title">Title dummy</string>
    <string name="pref_category_board_general">General</string>
    <string name="pref_board_name_title">Name</string>
    <string name="pref_board_name_summary">Board\'s name</string>
    <string name="pref_board_name_dialogtitle">Board\'s name</string>
    <string name="pref_board_alias_title">Alias (not used now)</string>
    <string name="pref_board_alias_summary">Board\'s alias</string>
    <string name="pref_board_alias_dialogtitle">Board\'s alias</string>
    <string name="pref_category_board_authentication">Authentication</string>
    <string name="pref_board_login_title">Login</string>
    <string name="pref_board_login_summary">Board\'s login</string>
    <string name="pref_board_login_dialogtitle">Board\'s login</string>
    <string name="pref_board_ua_title">User Agent</string>
    <string name="pref_board_ua_summary">Board\'s UA</string>
    <string name="pref_board_ua_dialogtitle">Board\'s User Agent</string>
    <string name="pref_board_cookie_title">Cookies</string>
    <string name="pref_board_cookie_summary">Board\'s cookies</string>
    <string name="pref_board_cookie_dialogtitle">Board\'s cookies</string>
    <string name="pref_category_board_backend">Backend</string>
    <string name="pref_board_slipsurl_title">Backend url</string>
    <string name="pref_board_slipsurl_summary">Board\'s backend url</string>
    <string name="pref_board_slipsurl_dialogtitle">Board\'s backend url</string>
    <string name="pref_board_posturl_title">Post url</string>
    <string name="pref_board_postsurl_summary">Board\'s post url</string>
    <string name="pref_board_postsurl_dialogtitle">Board\'s post url</string>
    <string name="pref_board_tagsencoded_title">Tags encoded</string>
    <string name="pref_board_tagsencoded_summary">Are backend\'s tags encoded</string>
    <string name="boards_list">Boards</string>
    <string name="pref_board_enabled_title">Enabled</string>
    <string name="pref_boardsenabled_summary">Is the board enabled</string>
    <string name="pref_debug_summary">Display logcat or notifications for debug</string>
    <string name="pref_debug_title">Debug mode</string>
    <string name="pref_fullscreen_summary">Display app in full screen mode</string>
    <string name="pref_fullscreen_title">Fullscreen</string>
    <string name="pref_service_update_seconds_title">Service update frequency</string>
    <string name="pref_service_update_seconds_summary">Number of seconds between two service update</string>
    <string name="local_service_connected">Activity bound to service</string>
    <string name="local_service_disconnected">Acivity unbound from service</string>
    <string name="pref_board_host_title">Server host</string>
    <string name="pref_board_host_summary">Server host</string>
    <string name="pref_board_referer_title">Referer post</string>
    <string name="pref_board_referer_summary">Referer sent in post request</string>
    <string name="drawer_open">Open the left drawer</string>
    <string name="drawer_close">Close the left drawer</string>
    <string name="pref_stickyservice_summary">Should boards bu updated in background?</string>
    <string name="pref_stickyservice_title">Background updates</string>
    <string name="ok_button">OK</string>
    <string name="pref_board_quiet_title">Quiet board</string>
    <string name="pref_quietboard_summary">Notify on every new post on board</string>
    <string name="pref_max_post_displayed_summary">Maximum posts displayed by board</string>
    <string name="pref_max_post_displayed_title">Posts by boards</string>
    <string name="reorder_boards">Change boards order</string>
    <string name="reorder_boards_summary">Change the boards\' tab order</string>
    <string name="title_activity_reorder_boards">\@strings/reorder_boards</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="launch_totoz_manager">Launch totoz manager</string>
    <string name="search_totoz_button_label">Search</string>

</resources>
